fixed word truncation in filters and bug in portfolio

--- a/src/style/filter.sass
+++ b/src/style/filter.sass
@@ -2,6 +2,7 @@
   display: flex
   margin-left: 1px
   flex: 1 1
+  width: calc(90% / 8)
 
   &:hover:not(.filter_disabled)
     .filter__dropdown
@@ -156,7 +157,7 @@
 
   &:hover
     background-color: rgba(136,170,221,.15)
-  
+
   &:before
     content: ''
     margin: 1px 4px 0 0
@@ -165,7 +166,7 @@
     border-radius: 2px
     border: 1px solid rgba(51,51,51,.5)
     display: inline-block
-    
+
   &:after
     position: absolute
     content: ''
